[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/LevelEditor/ItemSelect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/EditorObject.gd" type="Script" id=2]
[ext_resource path="res://tilemap_tiles.tres" type="TileSet" id=3]
[ext_resource path="res://Scripts/FileDialog.gd" type="Script" id=4]
[ext_resource path="res://Scenes/LevelEditorMenu.gd" type="Script" id=5]
[ext_resource path="res://Items/itemSaveButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Items/itemVisibilityButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Items/itemLoadButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Items/itemExitButton.tscn" type="PackedScene" id=9]

[node name="LevelEditor" type="Node2D"]

[node name="Level" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Level"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="EditorObject" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="EditorObject"]

[node name="ItemSelect" parent="." instance=ExtResource( 1 )]

[node name="FileDialog" type="FileDialog" parent="ItemSelect"]
visible = true
margin_left = -611.0
margin_top = -385.0
margin_right = -5.0
margin_bottom = -78.0
rect_min_size = Vector2( 400, 140 )
script = ExtResource( 4 )

[node name="CamContainer" type="Node2D" parent="."]
position = Vector2( 5, 3 )

[node name="Camera2D" type="Camera2D" parent="CamContainer"]
position = Vector2( -4, 2 )

[node name="LevelEditorMenu" type="Node2D" parent="."]
position = Vector2( -6, -518 )
z_index = 1
script = ExtResource( 5 )

[node name="VisibilityButton" parent="LevelEditorMenu" instance=ExtResource( 7 )]
margin_left = 536.0
margin_top = 6.0
margin_right = 696.0
margin_bottom = 86.0
script = null

[node name="SaveButton" parent="LevelEditorMenu" instance=ExtResource( 6 )]
margin_left = 179.0
margin_top = 5.0
margin_right = 339.0
margin_bottom = 85.0
script = null

[node name="LoadButton" parent="LevelEditorMenu" instance=ExtResource( 8 )]
margin_left = 353.0
margin_top = 6.0
margin_right = 513.0
margin_bottom = 86.0
script = null

[node name="ExitButton" parent="LevelEditorMenu" instance=ExtResource( 9 )]
margin_left = 729.0
margin_top = 6.00001
margin_right = 889.0
margin_bottom = 86.0
script = null

[connection signal="confirmed" from="ItemSelect/FileDialog" to="EditorObject" method="_on_FileDialog_confirmed"]
[connection signal="hide" from="ItemSelect/FileDialog" to="EditorObject" method="_on_FileDialog_hide"]
